@@ -1,0 +1,19 @@
+# $NetBSD: Makefile,v 1.1 2018/03/21 13:16:13 manu Exp $
+
+DISTNAME=	liblnk-alpha-20171101
+PKGNAME=	liblnk
+CATEGORIES=	devel
+MASTER_SITES=	${MASTER_SITE_GITHUB:=libyal/}
+GITHUB_RELEASE=	20171101
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	https://github.com/libyal/liblnk/wiki
+COMMENT=	Library to handle Windows .lnk shortcuts
+LICENSE=	gnu-lgpl-v3
+
+WRKSRC=		${WRKDIR}/liblnk-20171101
+
+GNU_CONFIGURE=	yes
+USE_LIBTOOL=	yes
+
+.include "../../mk/bsd.pkg.mk"
